cros: Use guest profile in AppListSyncableService

In guest session, we use two different profiles for "Suggested App" and
apps in Launcher. The later uses the profile of AppListSyncableService
which alwasy uses the original profile. However, the original profile is
not allowed in guest session.

This cl fixes this bug by returning guest profile in
AppListSyncableService in guest mode.

Bug: 840293
Test: manual.
Change-Id: I30d9464597eaacba9a08560ca03e0679a9e906bf
Reviewed-on: https://chromium-review.googlesource.com/1049005
Commit-Queue: Tao Wu <wutao@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557014}
Former-commit-id: 25151c3490c0fc6d761527375e243d144a06aa2d